--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
-    "jszip": "^3.10.1"
+    "jszip": "^3.10.1",
+    "maplibre-gl": "^3.6.2",
+    "@deck.gl/core": "^8.9.36",
+    "@deck.gl/layers": "^8.9.36",
+    "@deck.gl/mesh-layers": "^8.9.36",
+    "@deck.gl/mapbox": "^8.9.36",
+    "@loaders.gl/core": "^3.4.14",
+    "@loaders.gl/obj": "^3.4.14"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
